--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title>Podjaboys</title>
 </head>
 <body>
-    <h1>Готов к старту!</h1>
-    <p>Если видишь этот текст в браузере — ты красавчик, всё работает!    
-    </p>
+    <h1>Podjaboys</h1>
+    <p><a target="_blank" href="https://github.com/Vladlenlenin/PodjaboysLessons/blob/Publish-to-GitHub/week-1/index.html">week-1</a></p>
 </body>
 </html>
+   
