--- a/index.html
+++ b/index.html
@@ -5,8 +5,30 @@
     <title>Podjaboys</title>
 </head>
 <body>
-    <h1>Podjaboys</h1>
-    <p><a target="_blank" href="https://github.com/Vladlenlenin/PodjaboysLessons/blob/Publish-to-GitHub/week-1/index.html">week-1</a></p>
+    <h1>Готов к старту!</h1>
+    <p>Если видишь этот текст в браузере — ты красавчик, всё работает!    
+    </p>
 </body>
 </html>
-   
+
+<html>
+    <head>
+        <title>Podjaboys</title>
+        <meta charset="UTF-8">
+    </head>
+    <body>
+        <h1>PodjaboysLessons</h1>
+        <p><a target="_blank" href="https://github.com/Vladlenlenin/PodjaboysLessons/blob/Publish-to-GitHub/week-1/index.html">week-1</a></p>
+    </body>
+    </html>
+
+    <html>
+    <head>
+        <title>Podjaboys</title>
+        <meta charset="UTF-8">
+    </head>
+    <body>
+        <h1>PodjaboysLessons</h1>
+        <p><a target="_blank" href="https://github.com/Vladlenlenin/PodjaboysLessons/blob/Publish-to-GitHub/week-2/index.html">week-2</a></p>
+    </body>
+    </html>
