--- a/index.html
+++ b/index.html
@@ -11,55 +11,82 @@
 </body>
 </html>
 
-<html>
-   
-    <body>
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <title>Podjaboys</title>
+</head>
+   <body>
         <h1>PodjaboysLessons</h1>
         <p><a target="_blank" href="https://github.com/Vladlenlenin/PodjaboysLessons/blob/Publish-to-GitHub/week-1/index.html">week-1</a></p>
     </body>
     </html>
 
     <html>
-
-    <body>
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <title>Podjaboys</title>
+</head>
         <p><a target="_blank" href="https://github.com/Vladlenlenin/PodjaboysLessons/blob/Publish-to-GitHub/week-2/index.html">week-2</a></p>
     </body>
     </html>
 
     <html>
-
-    <body>
+ <!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <title>Podjaboys</title>
+</head>
         <p><a target="_blank" href="https://github.com/Vladlenlenin/PodjaboysLessons/blob/Publish-to-GitHub/week-3/index.html">week-3</a></p>
     </body>
     </html>
 
     <html>
-
-    <body>
+ <!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <title>Podjaboys</title>
+</head>
         <p><a target="_blank" href="https://github.com/Vladlenlenin/PodjaboysLessons/blob/Publish-to-GitHub/week-4/index.html">week-4</a></p>
     </body>
     </html>
 
     <html>
-
-    <body>
+ <!DOCTYPE html>
+    <html lang="ru">
+    <head>
+        <meta charset="UTF-8">
+        <title>Podjaboys</title>
+    </head>
         <p><a target="_blank" href="https://github.com/Vladlenlenin/PodjaboysLessons/blob/Publish-to-GitHub/week-5/index.html">week-5</a></p>
     </body>
     </html>
 
     <html>
-
-    <body>
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <title>Podjaboys</title>
+</head>
         <p><a target="_blank" href="https://github.com/Vladlenlenin/PodjaboysLessons/blob/Publish-to-GitHub/week-68/index.html">week-68</a></p>
     </body>
     </html>
 
     <html>
-
-    <body>
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <title>Podjaboys</title>
+</head>
         <p><a target="_blank" href="https://github.com/Vladlenlenin/PodjaboysLessons/blob/Publish-to-GitHub/final-project/index.html">final-project
         </a></p>
+
     </body>
     </html>
-
-
