--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <meta charset="UTF-8">
     <title>Podjaboys</title>
 </head>
-        <p><a target="_blank" href="https://github.com/Vladlenlenin/PodjaboysLessons/blob/Publish-to-GitHub/final-project/index.html">final-project
+        <p><a target="_blank" href="https://github.com/Vladlenlenin/PodjaboysLessons/blob/Publish-to-GitHub/final-project/index.html">final-projects
         </a></p>
 
     </body>
