--- a/index.html
+++ b/index.html
@@ -14,13 +14,23 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+   
+    <meta charset="UTF-8">
+    <h1>Podjaboys:</h1>
+        
+    
+</body>
+    </html>
+
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <ul>
     <meta charset="UTF-8">
     <title>Podjaboys</title>
-</head>
-   <body>
-        <h1>PodjaboysLessons</h1>
-        <p><a target="_blank" href="https://github.com/Vladlenlenin/PodjaboysLessons/blob/Publish-to-GitHub/week-1/index.html">week-1</a></p>
-    </body>
+        <p><a target="_blank" href="https://github.com/Vladlenlenin/PodjaboysLessons/blob/Publish-to-GitHub/week-1/index.html"><li>week-1</li></a></p>
+    </ul>
+</body>
     </html>
 
     <html>
@@ -30,7 +40,9 @@
     <meta charset="UTF-8">
     <title>Podjaboys</title>
 </head>
-        <p><a target="_blank" href="https://github.com/Vladlenlenin/PodjaboysLessons/blob/Publish-to-GitHub/week-2/index.html">week-2</a></p>
+<ul>
+        <p><a target="_blank" href="https://github.com/Vladlenlenin/PodjaboysLessons/blob/Publish-to-GitHub/week-2/index.html"><li>week-2</li></a></p>
+    </ul>
     </body>
     </html>
 
@@ -41,7 +53,9 @@
     <meta charset="UTF-8">
     <title>Podjaboys</title>
 </head>
-        <p><a target="_blank" href="https://github.com/Vladlenlenin/PodjaboysLessons/blob/Publish-to-GitHub/week-3/index.html">week-3</a></p>
+<ul>
+        <p><a target="_blank" href="https://github.com/Vladlenlenin/PodjaboysLessons/blob/Publish-to-GitHub/week-3/index.html"><li>week-3</li></a></p>
+    </ul>
     </body>
     </html>
 
@@ -52,7 +66,9 @@
     <meta charset="UTF-8">
     <title>Podjaboys</title>
 </head>
-        <p><a target="_blank" href="https://github.com/Vladlenlenin/PodjaboysLessons/blob/Publish-to-GitHub/week-4/index.html">week-4</a></p>
+<ul>
+        <p><a target="_blank" href="https://github.com/Vladlenlenin/PodjaboysLessons/blob/Publish-to-GitHub/week-4/index.html"><li>week-4</li></a></p>
+    </ul>
     </body>
     </html>
 
@@ -63,7 +79,9 @@
         <meta charset="UTF-8">
         <title>Podjaboys</title>
     </head>
-        <p><a target="_blank" href="https://github.com/Vladlenlenin/PodjaboysLessons/blob/Publish-to-GitHub/week-5/index.html">week-5</a></p>
+    <ul>
+        <p><a target="_blank" href="https://github.com/Vladlenlenin/PodjaboysLessons/blob/Publish-to-GitHub/week-5/index.html"><li>week-5</li></a></p>
+    </ul>
     </body>
     </html>
 
@@ -74,7 +92,9 @@
     <meta charset="UTF-8">
     <title>Podjaboys</title>
 </head>
-        <p><a target="_blank" href="https://github.com/Vladlenlenin/PodjaboysLessons/blob/Publish-to-GitHub/week-68/index.html">week-68</a></p>
+<ul>
+        <p><a target="_blank" href="https://github.com/Vladlenlenin/PodjaboysLessons/blob/Publish-to-GitHub/week-68/index.html"><li>week-68</li></a></p>
+    </ul>
     </body>
     </html>
 
@@ -85,8 +105,11 @@
     <meta charset="UTF-8">
     <title>Podjaboys</title>
 </head>
-        <p><a target="_blank" href="https://github.com/Vladlenlenin/PodjaboysLessons/blob/Publish-to-GitHub/final-project/index.html">final-projects
+<ul>
+        <p><a target="_blank" href="https://github.com/Vladlenlenin/PodjaboysLessons/blob/Publish-to-GitHub/final-project/index.html"><li>final-project</li>
         </a></p>
-
+    </ul>
     </body>
     </html>
+
+<img src="photo.jpeg" alt="Пример изображения">
