--- a/index.html
+++ b/index.html
@@ -9,107 +9,53 @@
     <p>Если видишь этот текст в браузере — ты красавчик, всё работает!    
     </p>
 </body>
-</html>
 
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-   
-    <meta charset="UTF-8">
+<body>
     <h1>Podjaboys:</h1>
-        
-    
 </body>
-    </html>
 
-<!DOCTYPE html>
-<html lang="ru">
-<head>
+<body>
     <ul>
-    <meta charset="UTF-8">
-    <title>Podjaboys</title>
         <p><a target="_blank" href="https://github.com/Vladlenlenin/PodjaboysLessons/blob/Publish-to-GitHub/week-1/index.html"><li>week-1</li></a></p>
     </ul>
 </body>
-    </html>
 
-    <html>
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <title>Podjaboys</title>
-</head>
+<body>
 <ul>
         <p><a target="_blank" href="https://github.com/Vladlenlenin/PodjaboysLessons/blob/Publish-to-GitHub/week-2/index.html"><li>week-2</li></a></p>
     </ul>
     </body>
-    </html>
 
-    <html>
- <!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <title>Podjaboys</title>
-</head>
+<body>
 <ul>
         <p><a target="_blank" href="https://github.com/Vladlenlenin/PodjaboysLessons/blob/Publish-to-GitHub/week-3/index.html"><li>week-3</li></a></p>
     </ul>
     </body>
-    </html>
 
-    <html>
- <!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <title>Podjaboys</title>
-</head>
+<body>
 <ul>
         <p><a target="_blank" href="https://github.com/Vladlenlenin/PodjaboysLessons/blob/Publish-to-GitHub/week-4/index.html"><li>week-4</li></a></p>
     </ul>
     </body>
-    </html>
 
-    <html>
- <!DOCTYPE html>
-    <html lang="ru">
-    <head>
-        <meta charset="UTF-8">
-        <title>Podjaboys</title>
-    </head>
-    <ul>
+<body>
+<ul>
         <p><a target="_blank" href="https://github.com/Vladlenlenin/PodjaboysLessons/blob/Publish-to-GitHub/week-5/index.html"><li>week-5</li></a></p>
     </ul>
     </body>
-    </html>
 
-    <html>
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <title>Podjaboys</title>
-</head>
+<body>
 <ul>
         <p><a target="_blank" href="https://github.com/Vladlenlenin/PodjaboysLessons/blob/Publish-to-GitHub/week-68/index.html"><li>week-68</li></a></p>
     </ul>
     </body>
-    </html>
 
-    <html>
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <title>Podjaboys</title>
-</head>
+<body>
 <ul>
         <p><a target="_blank" href="https://github.com/Vladlenlenin/PodjaboysLessons/blob/Publish-to-GitHub/final-project/index.html"><li>final-project</li>
         </a></p>
     </ul>
     </body>
-    </html>
 
 <img src="photo.jpeg" alt="Пример изображения">
+</html>
