--- a/index.html
+++ b/index.html
@@ -8,55 +8,17 @@
     <h1>Готов к старту!</h1>
     <p>Если видишь этот текст в браузере — ты красавчик, всё работает!    
     </p>
-</body>
 
-<body>
     <h1>Podjaboys:</h1>
-</body>
-
-<body>
     <ul>
-        <p><a target="_blank" href="https://github.com/Vladlenlenin/PodjaboysLessons/blob/Publish-to-GitHub/week-1/index.html"><li>week-1</li></a></p>
+     <li><a target="_blank" href="https://github.com/Vladlenlenin/PodjaboysLessons/blob/Publish-to-GitHub/week-1/index.html">week-1</a></li>
+     <li><a target="_blank" href="https://github.com/Vladlenlenin/PodjaboysLessons/blob/Publish-to-GitHub/week-2/index.html">week-2</a></li>
+     <li><a target="_blank" href="https://github.com/Vladlenlenin/PodjaboysLessons/blob/Publish-to-GitHub/week-3/index.html">week-3</a></li>
+     <li><a target="_blank" href="https://github.com/Vladlenlenin/PodjaboysLessons/blob/Publish-to-GitHub/week-4/index.html">week-4</a></li>
+     <li><a target="_blank" href="https://github.com/Vladlenlenin/PodjaboysLessons/blob/Publish-to-GitHub/week-5/index.html">week-5</a></li>
+     <li><a target="_blank" href="https://github.com/Vladlenlenin/PodjaboysLessons/blob/Publish-to-GitHub/week-68/index.html">week-68</a></li>
+     <li><a target="_blank" href="https://github.com/Vladlenlenin/PodjaboysLessons/blob/Publish-to-GitHub/final-project/index.html">final-project</a></li>
     </ul>
-</body>
-
-<body>
-<ul>
-        <p><a target="_blank" href="https://github.com/Vladlenlenin/PodjaboysLessons/blob/Publish-to-GitHub/week-2/index.html"><li>week-2</li></a></p>
-    </ul>
+     <img src="photo.jpeg" alt="Пример изображения">
     </body>
-
-<body>
-<ul>
-        <p><a target="_blank" href="https://github.com/Vladlenlenin/PodjaboysLessons/blob/Publish-to-GitHub/week-3/index.html"><li>week-3</li></a></p>
-    </ul>
-    </body>
-
-<body>
-<ul>
-        <p><a target="_blank" href="https://github.com/Vladlenlenin/PodjaboysLessons/blob/Publish-to-GitHub/week-4/index.html"><li>week-4</li></a></p>
-    </ul>
-    </body>
-
-<body>
-<ul>
-        <p><a target="_blank" href="https://github.com/Vladlenlenin/PodjaboysLessons/blob/Publish-to-GitHub/week-5/index.html"><li>week-5</li></a></p>
-    </ul>
-    </body>
-
-<body>
-<ul>
-        <p><a target="_blank" href="https://github.com/Vladlenlenin/PodjaboysLessons/blob/Publish-to-GitHub/week-68/index.html"><li>week-68</li></a></p>
-    </ul>
-    </body>
-
-<body>
-<ul>
-        <p><a target="_blank" href="https://github.com/Vladlenlenin/PodjaboysLessons/blob/Publish-to-GitHub/final-project/index.html"><li>final-project</li>
-        </a></p>
-    </ul>
-    </body>
-
-<img src="photo.jpeg" alt="Пример изображения">
-
 </html>
