--- a/week-1/index.html
+++ b/week-1/index.html
@@ -1,1 +1,62 @@
-/week-1 → Базовый HTML, адаптация к VS Code и GitHub  
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <title>Мой первый сайт</title>
+</head>
+<body>
+    <h1>Купить Sony Cyber-Shot DSC-P100 цифровой фотоаппарат</h1>
+    <p align="right">Стальной корпус. Оригинальная зарядка, карта памяти. Wide 2.8 Диафрагменное число (F), tele 5.2. 
+    <p align="right">  Минимальное фокусное расстояние 38 мм Минимальное расстояние съемки.
+    </p>
+    <ul>
+        <h3>Объектив</h3>
+        <li>Оптический Zoom 3 x</li>
+        <li>Диафрагменное число (F), wide 2.8</li>
+        <li>Диафрагменное число (F), tele 5.2</li>
+        <li>Минимальное фокусное расстояние 38 мм</li>
+        <li>Минимальное расстояние съемки 0.1 мм</li>
+        <h3>Матрица</h3>
+        <li>Число мегапикселей матрицы 5.2 Мпикс</li>
+        <li>Физический размер матрицы 1/1.8"</li>
+        <li>Разрешение по X 2592 пикс.</li>
+        <li>Разрешение по Y 1944 пикс.</li>
+        <li>Кроп-фактор 4.84</li>
+        <li>Фокусировка</li>
+        <li>Съемка</li>
+        <li>Экспозиция ручные настройки выдержки и диафрагм</li>
+        <li>Экспокоррекция +/- 2 EV с шагом 1/3 ступени</li>
+        <li>Чувствительность ISO, мин 100</li>
+        <li>Чувствительность ISO, макс 400</li>
+        <li>Выдержка, макс 30 c</li>
+        <li>Баланс белого-авто, предустановки</li>
+        <h3>Режимы съемки</h3>
+        <li>Запись видео, макросъемка, серийная съемка</li>
+        <li>Скорость быстрой съемки 1.7 кадров/с</li>
+        <h3>Видоискатель</h3>
+        <li>Оптический</li>
+        <li>Вспышка</li>
+        <li>Максимальное расстояние действия вспышки 3.8 м</li>
+        <li>Встроенная вспышка, подавление эффекта красных глаз</li>
+        <h3>Экран</h3>
+        <li>Размер экрана 1.8 "</li>
+        <li>Число точек LCD 134000</li>
+        <li>Экран фиксированный</li> 
+        <h3>Память и интерфейсы</h3>
+        <li>Разъемы и интерфейсы USB, аудио, видео</li>
+        <li>Версия USB 2.0</li>
+        <li>Поддерживаемые карты памяти Memory Stick</li>
+        <li>Память в поставке 32</li>
+        <li>Запись видео и звука</li>
+        <li>Число уровней JPEG 2</li>
+        <li>Максимальное разрешение видеосъемки 640x480</li>
+        <li>Максимальная частота кадров видеоролика 30 кадров/с</li>
+        <li>Время записи видео лимитируется картой памяти</li>
+        <li>Тип аккумуляторов свой собственный</li>
+        <h3>Габариты и вес</h3>
+        <li>Ширина 108 мм</li>
+        <li>Высота 52 мм</li>
+        <li>Толщина 27 мм</li>
+    </ul>
+</body>
+</html>
