Прокачала HTML-разметку

--- a/Доп задания/index.html
+++ b/Доп задания/index.html
@@ -2,10 +2,15 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Мой первый сайт</title>
+    <title>Стич</title>
 </head>
 <body>
-    <h1>Привет, мир!</h1>
-    <p>Я только что создал свою первую страницу!</p>
+    <h1>Прокачиваем HTML-разметку</h1>
+    <i>Стич-маленькая инопланетная собака!</i>
+    <b>Стич-синий!</b>
+
+    <p><a href="http://127.0.0.1:5500/%D0%94%D0%BE%D0%BF%20%D0%B7%D0%B0%D0%B4%D0%B0%D0%BD%D0%B8%D1%8F/%D0%A1%D1%82%D0%B8%D1%87/index.html" title="Так выглядит Стич">Стич</a></p>
+    <img src="stich-2-1 — копия.jpg" alt="Стич">
+ 
 </body>
 </html>
