--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 
     <h1>Podjaboys:</h1>
 <ul>
-    <li><a target="_blank" href="https://github.com/Vladlenlenin/PodjaboysLessons/blob/Publish-to-GitHub/week-1/index.html">week-1</a></li>
-    <li><a target="_blank" href="https://github.com/Vladlenlenin/PodjaboysLessons/blob/Publish-to-GitHub/week-2/index.html">week-2</a></li>
-    <li><a target="_blank" href="https://github.com/Vladlenlenin/PodjaboysLessons/blob/Publish-to-GitHub/week-3/index.html">week-3</a></li>
-    <li><a target="_blank" href="https://github.com/Vladlenlenin/PodjaboysLessons/blob/Publish-to-GitHub/week-4/index.html">week-4</a></li>
-    <li><a target="_blank" href="https://github.com/Vladlenlenin/PodjaboysLessons/blob/Publish-to-GitHub/week-5/index.html">week-5</a></li>
-    <li><a target="_blank" href="https://github.com/Vladlenlenin/PodjaboysLessons/blob/Publish-to-GitHub/week-68/index.html">week-68</a></li>
-    <li><a target="_blank" href="https://github.com/Vladlenlenin/PodjaboysLessons/blob/Publish-to-GitHub/final-project/index.html">final-project</a></li>
+    <li><a target="_blank" href="https://vladlenlenin.github.io/PodjaboysLessons/">week-1</a></li>
+    <li><a target="_blank" href="https://vladlenlenin.github.io/PodjaboysLessons/">week-2</a></li>
+    <li><a target="_blank" href="https://vladlenlenin.github.io/PodjaboysLessons/">week-3</a></li>
+    <li><a target="_blank" href="https://vladlenlenin.github.io/PodjaboysLessons/">week-4</a></li>
+    <li><a target="_blank" href="https://vladlenlenin.github.io/PodjaboysLessons/">week-5</a></li>
+    <li><a target="_blank" href="https://vladlenlenin.github.io/PodjaboysLessons/">week-68</a></li>
+    <li><a target="_blank" href="https://vladlenlenin.github.io/PodjaboysLessons/">final-project</a></li>
     </ul>
     <img src="photo.jpeg" alt="Пример изображения">
 </body>
