--- a/Доп задания/index.html
+++ b/Доп задания/index.html
@@ -3,11 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Стич</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Прокачиваем HTML-разметку</h1>
-    <i>Стич-маленькая инопланетная собака!</i>
-    <b>Стич-синий!</b>
+    <i>Стич-маленькая инопланетная собака.</i>
+    <b></bclass>Стич-синий!</b>
+    <p>Премьера Лило и Стич в Мае 2025 года!</p>
+
+    <button class="styled-button">Купить билет</button>
 
     <p><a href="./Стич/index.html" title="Так выглядит Стич">Стич</a></p>
     <img src="stich-2-1 — копия.jpg" alt="Стич">
