--- a/Доп задания/index.html
+++ b/Доп задания/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Прокачиваем HTML-разметку</h1>
     <i>Стич-маленькая инопланетная собака.</i>
-    <b></bclass>Стич-синий!</b>
+    <b>Стич-синий!</b>
     <p>Премьера Лило и Стич в Мае 2025 года!</p>
 
     <button class="styled-button">Купить билет</button>
